# throwdown

./: .example.env  .gitignore  AI.md  CLAUDE.md  DEPLOY.md  Makefile  README.md  build.sh  deploy-banyan.sh  deploy.sh  deploy.tx  package-lock.json  package.json  program-ids.json  setup-test-wallets.sh  vercel.json
.agent/workflows/: use-ubuntu-profile.md
api/: package-lock.json  package.json  tsconfig.json
api/src/: index.ts
api/src/routes/: banyan.ts  game.ts  lobby.ts
api/src/services/: solana.ts  subscriptionManager.ts
frontend/: .env  .eslintrc.json  .example.env  PWA-SETUP.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/dev-dist/: sw.js
frontend/public/: manifest.json
frontend/scripts/: banyan-bot.ts  generate-icons.js  init-banyan.ts  ledger-update.html  run_bot.sh  seed-games.ts  setup-manager.ts  update-tree.ts
frontend/src/: App.tsx  WalletProvider.tsx  global.d.ts  i18n.ts  index.css  main.tsx  theme.ts
frontend/src/__tests__/: BracketGame.test.ts
frontend/src/components/: AirdropButton.tsx  BanyanLogo.tsx  GameList.tsx  (+16 more)
program/: Cargo.toml  clippy.toml
program/src/: lib.rs  tests.rs
program/tests/: integration_test.rs
programs/great_banyan/: Cargo.toml
programs/great_banyan/src/: lib.rs
programs/great_banyan/tests/: functional.rs
programs/idiot_chess/: Cargo.toml
programs/idiot_chess/src/: lib.rs
programs/rps/: .gitignore  Cargo.toml
programs/rps/src/: lib.rs  tests.rs
programs/rps/tests/: integration_test.rs
scripts/: build-banyan.sh  build-rps.sh  build.js  clean.js  deploy-banyan.sh  deploy-rps.sh  deploy.js  full-functionality-test.ts  lint.js  program-id-manager.js  program-ids.json  test.js  utils.js
(+47 files in other folders)
