[package]
name = "great-banyan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "great_banyan"

[features]
no-entrypoint = []

[dependencies]
pinocchio = "0.5"
solana-program = "1.18"
thiserror = "1.0"
borsh = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.35", features = ["macros"] }
