[package]
name = "great_banyan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "great_banyan"

[features]
no-entrypoint = []

[dependencies]
pinocchio = "0.5"
solana-program = { version = "=1.18.26", default-features = false }
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
solana-sdk = { version = "=1.18.26", default-features = false }
tokio = { version = "1.35", features = ["macros"] }
subtle = "=2.4.1"
