[package]
name = "idiot_chess"
version = "0.1.0"
edition = "2021"

[lib]
name = "idiot_chess"
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
pinocchio = "0.5"

[features]
no-entrypoint = []

[lints.rust]
unexpected_cfgs = "allow"
