[package]
name = "skrim-token-program"
version = "0.1.0"
edition = "2021"

[lib]
name = "skrim_token_program"
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
pinocchio = "0.5"

[features]
no-entrypoint = []

[lints.rust]
unexpected_cfgs = "allow"